--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -394,7 +394,7 @@
                                   <%=formattedDate %>
                                 </td>
                                 <td>
-
+                                  <%= order.firstName %>
                                 </td>
                                 <td>
                                   <%=order._id%>
