--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -7,12 +7,12 @@
 <section class="section-slide">
 <div class="wrap-slick1 rs2-slick1">
     <div class="slick1">
-        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/images/slide-05.jpg);" data-thumb="/static/userAssets/images/thumb-01.jpg" data-caption="Women’s Wear">
+        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/img/homeShoe-banner1.jpg);" data-thumb="/static/userAssets/img/homeShoe-banner1.jpg" data-caption="Women’s Wear">
             <div class="container h-full">
                 <div class="flex-col-c-m h-full p-t-100 p-b-60 respon5">
                     <div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
                         <span class="ltext-202 txt-center cl0 respon2">
-                            Women Collection 2018
+                            Women Collection 2023
                         </span>
                     </div>
                         
@@ -31,18 +31,18 @@
             </div>
         </div>
 
-        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/images/slide-06.jpg);" data-thumb="/static/userAssets/images/thumb-02.jpg" data-caption="Men’s Wear">
+        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/img/home-banner2.jpg);" data-thumb="/static/userAssets/img/home-banner2.jpg" data-caption="Men’s Wear">
             <div class="container h-full">
                 <div class="flex-col-c-m h-full p-t-100 p-b-60 respon5">
                     <div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
                         <span class="ltext-202 txt-center cl0 respon2">
-                            Men New-Season
+                            New Season Styles
                         </span>
                     </div>
                         
                     <div class="layer-slick1 animated visible-false" data-appear="lightSpeedIn" data-delay="800">
                         <h2 class="ltext-104 txt-center cl0 p-t-22 p-b-40 respon1">
-                            Jackets & Coats
+                            Angles
                         </h2>
                     </div>
                         
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/images/slide-07.jpg);" data-thumb="/static/userAssets/images/thumb-03.jpg" data-caption="Men’s Wear">
+        <!-- <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/images/slide-07.jpg);" data-thumb="/static/userAssets/images/thumb-03.jpg" data-caption="Men’s Wear">
             <div class="container h-full">
                 <div class="flex-col-c-m h-full p-t-100 p-b-60 respon5">
                     <div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
@@ -78,9 +78,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="wrap-slick1-dots p-lr-10"></div>
+    <!-- <div class="wrap-slick1-dots p-lr-10"></div> -->
 </div>
 </section>
 
