--- a/views/admin/orderFullDetails.ejs
+++ b/views/admin/orderFullDetails.ejs
@@ -191,6 +191,15 @@
         <div class="col-12 col-md-4 col-lg-3 elemDesign"></div>
       </div>
 
+      
+
+
+
+
+
+
+
+
 
      <!-- ==============================================================orderFullDetailsModal============================================================================================ -->
 
@@ -274,5 +283,9 @@
           });
       }
       </script>
+
+      <!-- Bootstrap CSS and JS -->
+
+
 
     <%- include("../admin/layouts/adminFooter.ejs") %>
