--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -193,6 +193,10 @@
   </div>
 </main>
 
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script>
   function removeProduct(productId) {
     $.ajax({
