--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -113,13 +113,6 @@
 								<a href="/shop">Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
-								<a href="">Features</a>
-							</li>
-
-							<li>
-								<a href="">Blog</a>
-							</li>
 
 							<li>
 								<a href="#">About</a>
@@ -133,14 +126,7 @@
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-						<!-- <div class="input-group rounded" style="width: 287px;">
-							<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-							<span class="input-group-text border-0" id="search-addon">
-							  <i class="fas fa-search"></i>
-							</span>
-						  </div> -->
-
-						<a href="/cart" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
+						<a href="/cart" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="<%=count%>">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</a>
            
